--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Assignment One</title>
+        <link
+            rel="stylesheet"
+            href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
+            integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm"
+            crossorigin="anonymous"
+        />
+
         <link rel="stylesheet" href="style.css" />
     </head>
     <body>
@@ -14,13 +21,18 @@
                 <div class="logo">
                     <img src="./img/logo.png" alt="logo" />
                 </div>
+
                 <div class="main-menu">
                     <nav>
-                        <a href="#">Home</a>
-                        <a href="#">About</a>
-                        <a href="#">Services</a>
-                        <a href="#">Contact</a>
-                        <a href="#">Blog</a>
+                        <a href="#"></a>
+                        <a href="#"><i class="fas fa-search"></i></a>
+                        <a href="#"><i class="fas fa-home"></i></a>
+                        <a href="#"><i class="far fa-bell"></i></a>
+                        <a href="#"><i class="far fa-comment-alt"></i></a>
+                        <a href="#" class="header-profile">
+                            <img src="./img/profile.jpg" alt="profile" />
+                        </a>
+                        <a href="#"><i class="fas fa-bars"></i></a>
                     </nav>
                 </div>
             </div>
