header and fotter complete

--- a/index.html
+++ b/index.html
@@ -24,14 +24,21 @@
 
                 <div class="main-menu">
                     <nav>
-                        <a href="#"></a>
                         <a href="#"><i class="fas fa-search"></i></a>
                         <a href="#"><i class="fas fa-home"></i></a>
-                        <a href="#"><i class="far fa-bell"></i></a>
-                        <a href="#"><i class="far fa-comment-alt"></i></a>
-                        <a href="#" class="header-profile">
-                            <img src="./img/profile.jpg" alt="profile" />
-                        </a>
+                        <a href="#"
+                            ><i class="far fa-bell"> <span>20</span></i></a
+                        >
+                        <a href="#"
+                            ><i class="far fa-comment-alt"
+                                ><span>12</span></i
+                            ></a
+                        >
+                    </nav>
+                    <div class="header-profile">
+                        <img src="./img/profile.jpg" alt="profile" />
+                    </div>
+                    <nav>
                         <a href="#"><i class="fas fa-bars"></i></a>
                     </nav>
                 </div>
@@ -106,18 +113,42 @@
                         Lorem ipsum dolor sit amet consectetur adipisicing elit.
                         Ratione, tenetur.
                     </p>
-                    <p>46 Nowabganj Road, Lalbagh, Dhaka 1211</p>
-                    <p>+880 167-7729892</p>
-                    <p>+880 191-6306987</p>
+                    <p>
+                        <i class="fas fa-map-marker-alt"></i>46 Nowabganj Road,
+                        Lalbagh, Dhaka 1211
+                    </p>
+                    <p><i class="fas fa-phone-alt"></i>+880 167-7729892</p>
+                    <p><i class="fas fa-phone-alt"></i>+880 191-6306987</p>
                 </div>
                 <div class="follow">
                     <h3 class="footer-header">Follow</h3>
                     <ul>
-                        <li><a href="#">Facebook</a></li>
-                        <li><a href="#">Twitter</a></li>
-                        <li><a href="#">Github</a></li>
-                        <li><a href="#">LinkedIn</a></li>
-                        <li><a href="#">Instagram</a></li>
+                        <li>
+                            <a href="#"
+                                ><i class="fab fa-facebook-square"></i
+                                >Facebook</a
+                            >
+                        </li>
+                        <li>
+                            <a href="#"
+                                ><i class="fab fa-twitter-square"></i>Twitter</a
+                            >
+                        </li>
+                        <li>
+                            <a href="#"
+                                ><i class="fab fa-github-square"></i>Github</a
+                            >
+                        </li>
+                        <li>
+                            <a href="#"
+                                ><i class="fab fa-linkedin"></i>LinkedIn</a
+                            >
+                        </li>
+                        <li>
+                            <a href="#"
+                                ><i class="fab fa-instagram"></i>Instagram</a
+                            >
+                        </li>
                     </ul>
                 </div>
                 <div class="navigate">
@@ -142,9 +173,9 @@
                 </div>
                 <div class="download-apps">
                     <h3 class="footer-header">Download Apps</h3>
-                    <button>Android</button>
-                    <button>IPhone</button>
-                    <button>Windows</button>
+                    <button><i class="fab fa-android"></i></i>Android</button>
+                    <button><i class="fab fa-apple"></i>IPhone</button>
+                    <button><i class="fab fa-windows"></i>Windows</button>
                 </div>
             </div>
             <div class="footer-bottom">
