--- a/services.html
+++ b/services.html
@@ -83,9 +83,9 @@
 
                 <div class="profileMenu">
                     <nav>
-                        <a class="active-menu" href="index.html"> Home </a>
+                        <a href="index.html"> Home </a>
                         <a href="about.html"> About </a>
-                        <a href="services.html"> Services </a>
+                        <a class="active-menu" href="services.html"> Services </a>
                         <a href="contact.html"> Contact </a>
                         <a href="blog.html"> Blog </a>
                     </nav>
@@ -157,12 +157,11 @@
                 <div class="navigate">
                     <h3 class="footer-header">Navigate</h3>
                     <ul>
-                        <li><a class="active" href="index.html">Home </a></li>
+                        <li><a href="index.html">Home </a></li>
                         <li><a href="about.html">About </a></li>
-                        <li><a href="services.html">Services </a></li>
+                        <li><a class="active" href="services.html">Services </a></li>
                         <li><a href="contact.html">Contact </a></li>
                         <li><a href="blog.html">Blog </a></li>
-
                     </ul>
                 </div>
                 <div class="useful-links">
