--- a/about.html
+++ b/about.html
@@ -77,7 +77,7 @@
         <!-- /* Header Area End */ -->
 
         <!-- Profile Menu Section Start -->
-        <section class="profile-menu">
+        <section class="profile-menu mb">
             <div class="profile-name">
                 Developer Abir <span>Self Learned </span>
 
@@ -95,19 +95,20 @@
         <!-- Profile Menu Section End -->
 
         <!-- /* About Area Start */ -->
-        <section class="about">About Page</section>
+        <section class="about">
+            <div class="about-content">
+                <h2 class="about-title">About Me</h2>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus, odio? Optio animi nulla unde distinctio aliquid? Quidem exercitationem fuga maxime saepe sunt laboriosam sit adipisci. Blanditiis officiis laborum illum ex. Quod nesciunt voluptatem architecto, reiciendis laudantium nulla consequuntur, nihil, temporibus sed cupiditate delectus iure explicabo autem. Sunt, aspernatur quidem quia aliquam veniam reprehenderit qui blanditiis sint? Quae, dicta quod, excepturi sapiente ratione aliquid unde praesentium placeat cupiditate corrupti incidunt sequi iure reprehenderit magnam esse nihil optio impedit laudantium perspiciatis sed error? Corrupti libero excepturi, cumque autem odit quae sunt odio dolore ab earum perferendis minus iure tempore molestias? Ducimus dolor accusantium laborum, repudiandae quasi iure provident. Perspiciatis quidem accusantium, voluptatibus adipisci ut harum! Minus magni beatae eligendi commodi sed aspernatur molestiae dicta labore! Voluptatum dolores dicta dignissimos, hic libero corporis amet blanditiis? Exercitationem nesciunt hic culpa soluta possimus tempore temporibus inventore, illo deleniti doloribus facilis explicabo. Soluta placeat neque consequuntur.
+                </p>
+            </div>
+            <div class="about-image">
+                <img src="./img/about.jpg" alt="About Image">
+            </div>
+        </section>
         <!-- /* About Area End */ -->
 
-        <!-- /* Services Area Start */ -->
-        <section class="services">Services Page</section>
-        <!-- /* Services Area End */ -->
-        <!-- /* Contact Area Start */ -->
-        <section class="contact">Contact Page</section>
-        <!-- /* Contact Area End */ -->
-        <!-- /* Blog Area Start */ -->
-        <section class="blog">Blog Page</section>
-        <!-- /* Blog Area End */ -->
-        <!-- /* Footer Area Start */ -->
+      
         <footer>
             <div class="footer-top">
                 <div class="footer-logo">
