--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <!-- Profile Menu Section End -->
 
         <!-- /* About Area Start */ -->
-        <section class="about">About Page</section>
+        <section class="about">About Page tgg</section>
         <!-- /* About Area End */ -->
 
         <!-- /* Services Area Start */ -->
@@ -107,6 +107,7 @@
         <!-- /* Blog Area Start */ -->
         <section class="blog">Blog Page</section>
         <!-- /* Blog Area End */ -->
+
         <!-- /* Footer Area Start */ -->
         <footer>
             <div class="footer-top">
@@ -114,7 +115,13 @@
                     <img src="./img/logo.png" alt="logo" />
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Ratione, tenetur.
+                        Ratione, tenetur. 
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Ratione, tenetur. 
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Ratione, tenetur. 
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Ratione, tenetur. 
                     </p>
                     <p>
                         <i class="fas fa-map-marker-alt"></i>46 Nowabganj Road,
@@ -127,10 +134,9 @@
                     <h3 class="footer-header">Follow</h3>
                     <ul>
                         <li>
-                            <a href="https://www.facebook.com/lancer.abir/"
-                                ><i class="fab fa-facebook-square"></i
-                                >Facebook</a
-                            >
+                            <a href="https://www.facebook.com/lancer.abir/">
+                                <i class="fab fa-facebook-square"></i>Facebook
+                                </a>
                         </li>
                         <li>
                             <a href="https://twitter.com/"
@@ -162,7 +168,6 @@
                         <li><a href="services.html">Services </a></li>
                         <li><a href="contact.html">Contact </a></li>
                         <li><a href="blog.html">Blog </a></li>
-
                     </ul>
                 </div>
                 <div class="useful-links">
