--- a/services.html
+++ b/services.html
@@ -76,6 +76,7 @@
         </header>
         <!-- /* Header Area End */ -->
 
+
         <!-- Profile Menu Section Start -->
         <section class="profile-menu">
             <div class="profile-name">
@@ -94,19 +95,94 @@
         </section>
         <!-- Profile Menu Section End -->
 
-        <!-- /* About Area Start */ -->
-        <section class="about">About Page</section>
-        <!-- /* About Area End */ -->
+       
 
         <!-- /* Services Area Start */ -->
-        <section class="services">Services Page</section>
+        <section class="services extra-padding custom-background">
+            <div class="section-header">
+                <h2>My Service</h2>
+            </div>
+            <div class="service-area mt">
+                <div class="service-box active-services">
+                    <div class="service-title">
+                        <div class="service-icon">
+                            <i class="fab fa-html5"></i>
+                        </div>
+                        <h3>HTML</h3>
+                    </div>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos est amet delectus ea aliquam doloremque magni unde illo explicabo nihil ducimus sapiente, provident nam quasi!</p>
+                </div>
+                <div class="service-box">
+                    <div class="service-title">
+                        <div class="service-icon">
+                            <i class="fab fa-css3-alt"></i>
+                        </div>
+                        <h3>CSS</h3>
+                    </div>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos est amet delectus ea aliquam doloremque magni unde illo explicabo nihil ducimus sapiente, provident nam quasi!</p>
+                </div>
+                <div class="service-box">
+                    <div class="service-title">
+                        <div class="service-icon">
+                            <i class="fab fa-js-square"></i>
+                        </div>
+                        <h3>JavaScript</h3>
+                    </div>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos est amet delectus ea aliquam doloremque magni unde illo explicabo nihil ducimus sapiente, provident nam quasi!</p>
+                </div>
+                <div class="service-box">
+                    <div class="service-title">
+                        <div class="service-icon">
+                            <i class="fab fa-react"></i>
+                        </div>
+                        <h3>React JS</h3>
+                    </div>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos est amet delectus ea aliquam doloremque magni unde illo explicabo nihil ducimus sapiente, provident nam quasi!</p>
+                </div>
+                
+            </div>
+            <div class="service-area">
+                <div class="service-box">
+                    <div class="service-title">
+                        <div class="service-icon">
+                            <i class="fab fa-python"></i>
+                        </div>
+                        <h3>Python</h3>
+                    </div>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos est amet delectus ea aliquam doloremque magni unde illo explicabo nihil ducimus sapiente, provident nam quasi!</p>
+                </div>
+                <div class="service-box">
+                    <div class="service-title">
+                        <div class="service-icon">
+                            <i class="fab fa-node"></i>
+                        </div>
+                        <h3>Node JS</h3>
+                    </div>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos est amet delectus ea aliquam doloremque magni unde illo explicabo nihil ducimus sapiente, provident nam quasi!</p>
+                </div>
+                <div class="service-box">
+                    <div class="service-title">
+                        <div class="service-icon">
+                            <i class="fas fa-database"></i>
+                        </div>
+                        <h3>SQL Database</h3>
+                    </div>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos est amet delectus ea aliquam doloremque magni unde illo explicabo nihil ducimus sapiente, provident nam quasi!</p>
+                </div>
+                <div class="service-box">
+                    <div class="service-title">
+                        <div class="service-icon">
+                            <i class="fas fa-server"></i>
+                        </div>
+                        <h3>MongoDB</h3>
+                    </div>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos est amet delectus ea aliquam doloremque magni unde illo explicabo nihil ducimus sapiente, provident nam quasi!</p>
+                </div>
+            </div>
+        </section>
         <!-- /* Services Area End */ -->
-        <!-- /* Contact Area Start */ -->
-        <section class="contact">Contact Page</section>
-        <!-- /* Contact Area End */ -->
-        <!-- /* Blog Area Start */ -->
-        <section class="blog">Blog Page</section>
-        <!-- /* Blog Area End */ -->
+  
+
         <!-- /* Footer Area Start */ -->
         <footer>
             <div class="footer-top">
@@ -114,7 +190,13 @@
                     <img src="./img/logo.png" alt="logo" />
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Ratione, tenetur.
+                        Ratione, tenetur. 
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Ratione, tenetur. 
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Ratione, tenetur. 
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Ratione, tenetur. 
                     </p>
                     <p>
                         <i class="fas fa-map-marker-alt"></i>46 Nowabganj Road,
