--- a/about.html
+++ b/about.html
@@ -98,7 +98,7 @@
         <section class="about custom-background">
             <div class="about-content">
                 
-                    <h2 class="about-title">about me</h2>
+                <h2 class="about-title">About Me</h2>
                     <h3>I'm a Web Designer & Developer</h3>
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas aperiam dolores corporis. Commodi reprehenderit aliquid eligendi deserunt sit dolor quisquam, labore minus quos, aut aspernatur, sed voluptas accusamus enim suscipit?
