--- a/blog.html
+++ b/blog.html
@@ -77,7 +77,7 @@
         <!-- /* Header Area End */ -->
 
         <!-- Profile Menu Section Start -->
-        <section class="profile-menu">
+        <section class="profile-menu mb">
             <div class="profile-name">
                 Developer Abir <span>Self Learned </span>
 
@@ -98,6 +98,55 @@
         <section class="blog extra-padding custom-background">
             <div class="section-header">
                 <h2>Blog Area</h2>
+            </div>
+            <div class="blog-info">
+                <div class="bog-image">
+                    <img src="./img/blog1.jpg" alt="blog"> 
+                </div>
+                <div class="blog-info-content">
+                    <div class="blog-content-title">
+                        <h3><i class="far fa-star"></i> React Blog</h3>
+                    </div>
+                    <div class="blog-info-box">
+                        <h4>Project</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt, animi!</p>
+                    </div>
+                    <div class="blog-info-box active-blog">
+                        <h4>Project</h4>
+                        <p>Lorem ipsum dolor sit amet  adipiicing elit. Deserunt, animi!</p>
+                    </div>
+                    <div class="blog-info-box">
+                        <h4>Project</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur elit. Deserunt, animi!</p>
+                    </div>
+                    <div class="blog-info-box">
+                        <h4>Project</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt, animi!</p>
+                    </div>
+                </div>
+            </div>
+            <div class="blog-area">
+                <div class="bog-box active-blog">
+                    <img src="./img/blog1.jpg" alt="blog">
+                    <div class="blog-content">
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquam ex unde, ullam magnam architecto sunt perspiciatis quas voluptatibus animi vitae reiciendis temporibus incidunt eius ducimus.</p>
+                        <button class="read-more"> Read More <i class="fas fa-angle-double-right"></i> </button>
+                    </div>
+                </div>
+                <div class="bog-box">
+                    <img src="./img/blog2.jpg" alt="blog">
+                    <div class="blog-content">
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquam ex unde, ullam magnam architecto sunt perspiciatis quas voluptatibus animi vitae reiciendis temporibus incidunt eius ducimus.</p>
+                        <button class="read-more"> Read More <i class="fas fa-angle-double-right"></i> </button>
+                    </div>
+                </div>
+                <div class="bog-box">
+                    <img src="./img/blog3.jpg" alt="blog">
+                    <div class="blog-content">
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquam ex unde, ullam magnam architecto sunt perspiciatis quas voluptatibus animi vitae reiciendis temporibus incidunt eius ducimus.</p>
+                        <button class="read-more"> Read More <i class="fas fa-angle-double-right"></i> </button>
+                    </div>
+                </div>
             </div>
         </section>
         <!-- /* Blog Area End */ -->
