--- a/contact.html
+++ b/contact.html
@@ -77,7 +77,7 @@
         <!-- /* Header Area End */ -->
 
         <!-- Profile Menu Section Start -->
-        <section class="profile-menu">
+        <section class="profile-menu mb">
             <div class="profile-name">
                 Developer Abir <span>Self Learned </span>
 
@@ -106,27 +106,27 @@
                     
                     <div class="address">
                         <ul>
-                            <li> <a href=""><i class="fas fa-map-marker-alt"></i>46 Nowabganj Road,
+                            <li> <a href="https://www.google.com.bd/maps/@23.7806365,90.4193257,12z"><i class="fas fa-map-marker-alt"></i>46 Nowabganj Road,
                                 Lalbagh, Dhaka 1211 </a>
                             </li>
-                            <li><a href=""><i class="fas fa-at"></i> lancerabir.com@gmail.com </a></li>
-                            <li><a href=""><i class="fas fa-phone-alt"></i>+880 167-7729892</a></li>
-                            <li><a href=""><i class="fas fa-phone-alt"></i>+880 191-6306987</a></li>
+                            <li><a href="mailto:lancerabir.com@gmail.com"><i class="fas fa-at"></i> lancerabir.com@gmail.com </a></li>
+                            <li><a href="tel:+8801677729892"><i class="fas fa-phone-alt"></i>+880 167-7729892</a></li>
+                            <li><a href="tel:+8801916306987"><i class="fas fa-phone-alt"></i>+880 191-6306987</a></li>
                         </ul>
                     </div>
                     <div class="social-icon">
                         <ul>
                             <li>
-                                <a href=""> <i class="fab fa-facebook-square"></i> </a>
+                                <a href="https://www.facebook.com/lancer.abir/"> <i class="fab fa-facebook-square"></i> </a>
                             </li>
                             <li>
-                                <a href=""> <i class="fab fa-github-square"></i> </a>
+                                <a href="https://github.com/lancerAbir"> <i class="fab fa-github-square"></i> </a>
                             </li>
                             <li>
-                                <a href=""> <i class="fab fa-linkedin"></i> </a>
+                                <a href="https://www.linkedin.com/in/lancer-abir/"> <i class="fab fa-linkedin"></i> </a>
                             </li>
                             <li>
-                                <a href=""> <i class="fab fa-instagram"></i> </a>
+                                <a href="https://www.instagram.com/lancerabir/"> <i class="fab fa-instagram"></i> </a>
                             </li>
                             
                         </ul>
