--- a/services.html
+++ b/services.html
@@ -78,7 +78,7 @@
 
 
         <!-- Profile Menu Section Start -->
-        <section class="profile-menu">
+        <section class="profile-menu mb">
             <div class="profile-name">
                 Developer Abir <span>Self Learned </span>
 
