--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
         <!-- /* Blog Area End */ -->
 
        <!-- /* Contact Area Start */ -->
-       <section class="contact extra-padding custom-background">
+       <section class="contact extra-padding">
         <div class="section-header">
             <h2>Contact Me</h2>
         </div>
